--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,11 +1,8 @@
 name: CI/CD
 
-on: workflow_dispatch
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
-			
+on: 
+  workflow_dispatch
+  			
 jobs:
   build:
     runs-on: ubuntu-latest
