--- a/.github/workflows/app-with-docker-actions.yml
+++ b/.github/workflows/app-with-docker-actions.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets_EC2_PRIVATE_KEY }}
+        key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
           sudo docker stop $(sudo docker ps -qa)
