--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -1,9 +1,8 @@
 name: Build and Push Docker Image To AWS ECR
 on:
-  workflow_dispatch
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 jobs:
   build-push-image:
@@ -12,6 +11,28 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Make application-prod.properties
+        run: |
+          cd ./src/main/resources
+          touch ./application.properties
+          echo "${{ secrets.PROPERTIES }}" > ./application.properties
+        shell: bash
+        
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+        
+      - name: Naming jar file
+        run: mv ./target/*.jar ./target/app.jar
+  
+      - name: Check jar file
+        run: ls ./target        
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
