--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -11,14 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Make application-prod.properties
+          
+      - name: Make application.properties
         run: |
           cd ./src/main/resources
           touch ./application.properties
@@ -32,7 +33,7 @@ jobs:
         run: mv ./target/*.jar ./target/app.jar
   
       - name: Check jar file
-        run: ls ./target        
+        run: ls ./target
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
