--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
 		    <version>1.18.36</version>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
